--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -1,3 +1,24 @@
+@book {Schoute,
+ 	AUTHOR = {Schoute, Pieter Hendrik},
+	TITLE = {Analytical treatment of the polytopes regularly derived from the regular polytopes. {S}ection {I}: {T}he simplex.},
+ 	JOURNAL = {{Amst. Akad. Verh. Sect. I}},
+ 	FJOURNAL = {{Verhandelingen der Koninklijke (Nederlandse) Akademie van Wetenschappen, Afdeeling Natuurkunde, Sectie 1}},
+ 	VOLUME = {11},
+	NUMBER = {3},
+ 	PAGES = {82 s.},
+ 	YEAR = {1911},
+}
+
+@article {Rado,
+	AUTHOR = {Rado, Richard},
+	TITLE = {An inequality},
+	JOURNAL = {J. London Math. Soc.},
+	FJOURNAL = {The Journal of the London Mathematical Society},
+	VOLUME = {27},
+	YEAR = {1952},
+	PAGES = {1--6},
+}
+
 @incollection {Lewis,
 	AUTHOR = {Lewis, Richard P.},
 	TITLE = {The number of spanning trees of a complete multipartite graph},
@@ -39,6 +60,82 @@
 	VOLUME = {152},
 	YEAR = {1998},
 	PAGES = {vii+370},
+}
+
+@book {Shi1,
+	AUTHOR = {Shi, Jian Yi},
+	TITLE = {The {K}azhdan-{L}usztig cells in certain affine {W}eyl groups},
+	SERIES = {Lecture Notes in Mathematics},
+	VOLUME = {1179},
+	PUBLISHER = {Springer-Verlag, Berlin},
+	YEAR = {1986},
+	PAGES = {x+307},
+}
+
+@article {Shi2,
+	AUTHOR = {Shi, Jian Yi},
+	TITLE = {Sign types corresponding to an affine {W}eyl group},
+	JOURNAL = {J. London Math. Soc. (2)},
+	FJOURNAL = {Journal of the London Mathematical Society. Second Series},
+	VOLUME = {35},
+	YEAR = {1987},
+	NUMBER = {1},
+	PAGES = {56--74},
+}
+
+@article {Stanley,
+	AUTHOR = {Stanley, Richard P.},
+	TITLE = {Hyperplane arrangements, interval orders, and trees},
+	JOURNAL = {Proc. Nat. Acad. Sci. U.S.A.},
+	FJOURNAL = {Proceedings of the National Academy of Sciences of the United States of America},
+	VOLUME = {93},
+	YEAR = {1996},
+	NUMBER = {6},
+	PAGES = {2620--2625},
+}
+
+@incollection {PostnikovStanley,
+	AUTHOR = {Postnikov, Alexander and Stanley, Richard P.},
+	TITLE = {Deformations of {C}oxeter hyperplane arrangements},
+	NOTE = {In memory of Gian-Carlo Rota},
+	JOURNAL = {J. Combin. Theory Ser. A},
+	FJOURNAL = {Journal of Combinatorial Theory. Series A},
+	VOLUME = {91},
+	YEAR = {2000},
+	NUMBER = {1-2},
+	PAGES = {544--597},
+}
+
+@incollection {ManinSchechtman,
+	AUTHOR = {Manin, Yu. I. and Schechtman, V. V.},
+	TITLE = {Arrangements of hyperplanes, higher braid groups and higher {B}ruhat orders},
+	BOOKTITLE = {Algebraic number theory},
+	SERIES = {Adv. Stud. Pure Math.},
+	VOLUME = {17},
+	PAGES = {289--308},
+	PUBLISHER = {Academic Press, Boston, MA},
+	YEAR = {1989},
+}
+
+@article {BayerBrandt,
+	AUTHOR = {Bayer, Margaret M. and Brandt, Keith A.},
+	TITLE = {Discriminantal arrangements, fiber polytopes and formality},
+	JOURNAL = {J. Algebraic Combin.},
+	FJOURNAL = {Journal of Algebraic Combinatorics. An International Journal},
+	VOLUME = {6},
+	YEAR = {1997},
+	NUMBER = {3},
+	PAGES = {229--246},
+}
+
+@article {Bernardi,
+	AUTHOR = {Bernardi, Olivier},
+	TITLE = {Deformations of the braid arrangement and trees},
+	JOURNAL = {Adv. Math.},
+	FJOURNAL = {Advances in Mathematics},
+	VOLUME = {335},
+	YEAR = {2018},
+	PAGES = {466--518},
 }
 
 @Article{Rota,
