--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -51,7 +51,7 @@
 	PAGES = {401--411},
 }
 
-@book {Ziegler-polytopes,
+@book {Ziegler,
 	AUTHOR = {G{\"u}nter~M.~Ziegler},
 	TITLE = {Lectures on Polytopes},
 	SERIES = {Graduate texts in Mathematics},
@@ -107,7 +107,7 @@
 }
 
 @incollection {ManinSchechtman,
-	AUTHOR = {Manin, Yu. I. and Schechtman, V. V.},
+	AUTHOR = {Manin, Yurii I. and Schechtman, V. V.},
 	TITLE = {Arrangements of hyperplanes, higher braid groups and higher {B}ruhat orders},
 	BOOKTITLE = {Algebraic number theory},
 	SERIES = {Adv. Stud. Pure Math.},
@@ -138,334 +138,277 @@
 	PAGES = {466--518},
 }
 
-@Article{Rota,
- Author = {Rota, Gian-Carlo},
- Title = {On the foundations of combinatorial theory. {I}: {Theory} of {M{\"o}bius} functions},
- FJournal = {Zeitschrift f{\"u}r Wahrscheinlichkeitstheorie und Verwandte Gebiete},
- Journal = {Z. Wahrscheinlichkeitstheor. Verw. Geb.},
- ISSN = {0044-3719},
- Volume = {2},
- Pages = {340--368},
- Year = {1964},
- Language = {English},
- DOI = {10.1007/BF00531932},
- Keywords = {06A07,05A15},
- zbMATH = {3195424},
- Zbl = {0121.02406}
+@article {Rota,
+	AUTHOR = {Rota, Gian-Carlo},
+	TITLE = {On the foundations of combinatorial theory. {I}. {T}heory of {M}\"{o}bius functions},
+	JOURNAL = {Z. Wahrscheinlichkeitstheorie und Verw. Gebiete},
+	FJOURNAL = {Zeitschrift f\"{u}r Wahrscheinlichkeitstheorie und Verwandte Gebiete},
+	VOLUME = {2},
+	YEAR = {1964},
+	PAGES = {340--368 (1964)},
 }
 
-@InCollection{Birkhoff,
- Author = {Birkhoff, Garrett},
- Title = {Lattices and their applications},
- BookTitle = {Lattice theory and its applications. In celebration of Garrett Birkhoff's 80th birthday},
- ISBN = {3-88538-223-7},
- Pages = {7--25},
- Year = {1995},
- Publisher = {Lemgo: Heldermann Verlag},
- Language = {English},
- Keywords = {06-03,01A60,01A65},
- zbMATH = {802710},
- Zbl = {0843.06001}
+@incollection {Birkhoff,
+	AUTHOR = {Birkhoff, Garrett},
+	TITLE = {Lattices and their applications},
+	BOOKTITLE = {Lattice theory and its applications ({D}armstadt, 1991)},
+	SERIES = {Res. Exp. Math.},
+	VOLUME = {23},
+	PAGES = {7--25},
+	PUBLISHER = {Heldermann, Lemgo},
+	YEAR = {1995},
 }
 
-@Book{Zaslavsky,
- Author = {Zaslavsky, Thomas},
- Title = {Facing up to arrangements: {Face}-count formulas for partitions of space by hyperplanes},
- FSeries = {Memoirs of the American Mathematical Society},
- Series = {Mem. Am. Math. Soc.},
- ISSN = {0065-9266},
- Volume = {154},
- ISBN = {978-0-8218-1854-1; 978-0-8218-9955-7},
- Year = {1975},
- Publisher = {Providence, RI: American Mathematical Society (AMS)},
- Language = {English},
- DOI = {10.1090/memo/0154},
- Keywords = {51M20,05B35,05A15},
- zbMATH = {3464406},
- Zbl = {0296.50010}
+@article {Zaslavsky,
+	AUTHOR = {Zaslavsky, Thomas},
+	TITLE = {Facing up to arrangements: face-count formulas for partitions of space by hyperplanes},
+	JOURNAL = {Mem. Amer. Math. Soc.},
+	FJOURNAL = {Memoirs of the American Mathematical Society},
+	VOLUME = {1},
+	YEAR = {1975},
+	NUMBER = {issue 1, 154},
+	PAGES = {vii+102},
 }
 
-@Article{CKSS04,
- Author = {Cho, Manwon and Kim, Dongsu and Seo, Seunghyun and Shin, Heesung},
- Title = {Colored {Pr{\"u}fer} codes for {{\(k\)}}-edge colored trees},
- FJournal = {The Electronic Journal of Combinatorics},
- Journal = {Electron. J. Comb.},
- ISSN = {1077-8926},
- Volume = {11},
- Number = {1},
- Pages = {research paper n10, 7},
- Year = {2004},
- Language = {English},
- Keywords = {05C05,05C30},
- zbMATH = {2161291},
- Zbl = {1060.05021}
+@article {ChoKimSeoShin,
+	AUTHOR = {Cho, Manwon and Kim, Dongsu and Seo, Seunghyun and Shin, Heesung},
+	TITLE = {Colored {P}r\"{u}fer codes for {$k$}-edge colored trees},
+	JOURNAL = {Electron. J. Combin.},
+	FJOURNAL = {Electronic Journal of Combinatorics},
+	VOLUME = {11},
+	YEAR = {2004},
+	NUMBER = {1},
+	PAGES = {Note 10, 7},
 }
 
-@article{DP15,
-  title = {Weak Cat-Operads},
-  author = {Do{\v s}en, Kosta and Petri{\'c}, Zoran},
-  year = {2015},
-  journal = {Logical Methods in Computer Science},
-  volume = {11},
-  number = {1},
-  pages = {1--23}
+@article {DosenPetric15,
+	AUTHOR = {Do\v{s}en, Kosta and Petri\'{c}, Zoran},
+	TITLE = {Weak {C}at-operads},
+	JOURNAL = {Log. Methods Comput. Sci.},
+	FJOURNAL = {Logical Methods in Computer Science},
+	VOLUME = {11},
+	YEAR = {2015},
+	NUMBER = {1},
+	PAGES = {1:10, 38},
 }
 
-@article{KhariKhoro20,
-  title = {Gr\"obner Bases for Coloured Operads},
-  author = {Kharitonov, Vladislav and Koroshkin, Anton},
-  year = {2020},
-  journal = {ArXiv e-prints},
-  eprint = {2008.05295v1},
-  pages = {\texttt{arXiv:2008.05295}},
+@article {KharitonovKhoroshkin,
+	AUTHOR = {Kharitonov, Vladislav and Khoroshkin, Anton},
+	TITLE = {Gr\"{o}bner bases for coloured operads},
+	JOURNAL = {Ann. Mat. Pura Appl. (4)},
+	FJOURNAL = {Annali di Matematica Pura ed Applicata. Series IV},
+	VOLUME = {201},
+	YEAR = {2022},
+	NUMBER = {1},
+	PAGES = {203--241},
 }
 
-
-@book{LodayVallette12,
-  title = {Algebraic Operads},
-  author = {Loday, Jean-Louis and Vallette, Bruno},
-  year = {2012},
-  series = {Grundlehren Der Mathematischen Wissenschaften [{{Fundamental}} Principles of Mathematical Sciences]},
-  volume = {346},
-  pages = {xviii+512},
-  publisher = {{Springer-Verlag}},
-  address = {{Berlin}}
+@book {LodayVallette,
+	AUTHOR = {Loday, Jean-Louis and Vallette, Bruno},
+	TITLE = {Algebraic operads},
+	SERIES = {Grundlehren der mathematischen Wissenschaften [Fundamental Principles of Mathematical Sciences]},
+	VOLUME = {346},
+	PUBLISHER = {Springer, Heidelberg},
+	YEAR = {2012},
+	PAGES = {xxiv+634},
 }
 
-@article{Markl19,
-  title = {Permutads via Operadic Categories, and the Hidden Associahedron},
-  author = {Markl, Martin},
-  year = {2020},
-  journal = {J. Comb. Theory, Ser. A},
-  volume = {175},
-  pages = {105277}
+@article {Markl,
+	AUTHOR = {Markl, Martin},
+	TITLE = {Permutads via operadic categories, and the hidden associahedron},
+	JOURNAL = {J. Combin. Theory Ser. A},
+	FJOURNAL = {Journal of Combinatorial Theory. Series A},
+	VOLUME = {175},
+	YEAR = {2020},
+	PAGES = {105277, 40},
 }
 
-@article{OEIS,
-  author  = {OEIS},
-  title   = {The On-Line Encyclopedia of Integer Sequences},
-  pages = {Published electronically at \texttt{http://oeis.org}},
-  year            = {2022}
+@unpublished {OEIS,
+  	KEY = {{OEIS}},
+	TITLE = {The {O}n-{L}ine {E}ncyclopedia of {I}nteger {S}equences},
+	NOTE = {Published electronically at \url{http://oeis.org}},
+	YEAR = {2010},
 }
 
-@article{kajitani1982number,
-  title={On the number of essential complementary partitions},
-  author={Kajitani, YOJI and Ueno, S and Chen, Wai-Kai},
-  journal={IEEE Transactions on Circuits and Systems},
-  volume={29},
-  number={8},
-  pages={572--574},
-  year={1982},
-  publisher={IEEE}
+@article {KajitaniUenoChen,
+	AUTHOR = {Kajitani, Yoji and Ueno, S. and Chen, Wai Kai},
+	TITLE = {On the number of essential complementary partitions},
+	JOURNAL = {IEEE Trans. Circuits and Systems},
+	FJOURNAL = {Institute of Electrical and Electronics Engineers. Transactions on Circuits and Systems},
+	VOLUME = {29},
+	YEAR = {1982},
+	NUMBER = {8},
+	PAGES = {572--574},
 }
 
-@article{chen1971tables,
-  title={Tables of essential complementary partitions},
-  author={Chen, Wai-Kai and Goyal, I},
-  journal={IEEE Transactions on Circuit Theory},
-  volume={18},
-  number={5},
-  pages={562--563},
-  year={1971},
-  publisher={IEEE}
+@article {ChenGoyal,
+	AUTHOR = {Chen, Wai-Kai and Goyal, I},
+	TITLE = {Tables of essential complementary partitions},
+	JOURNAL = {IEEE Trans. Circuits and Systems},
+	FJOURNAL = {Institute of Electrical and Electronics Engineers. Transactions on Circuits and Systems},
+	VOLUME = {18},
+	YEAR = {1971},
+	NUMBER = {5},
+	PAGES = {562--563},
 }
 
-@article{chen1969computer,
-  title={Computer generation of trees and co-trees in a cascade of multiterminal networks},
-  author={Chen, Wai-Kai},
-  journal={IEEE Transactions on Circuit Theory},
-  volume={16},
-  number={4},
-  pages={518--526},
-  year={1969},
-  publisher={IEEE}
+@article {Chen,
+	AUTHOR = {Chen, Wai-kai},
+	TITLE = {Computer generation of trees and co-trees in a cascade of multiterminal networks},
+	JOURNAL = {IEEE Trans. Circuit Theory},
+	FJOURNAL = {IEEE Transactions on Circuit Theory},
+	VOLUME = {CT-16},
+	YEAR = {1969},
+	PAGES = {518--526},
 }
 
-@misc{saneblidzeComparingDiagonalsAssociahedra2022,
-  title = {Comparing {{Diagonals}} on the {{Associahedra}}},
-  author = {Saneblidze, Samson and Umble, Ronald},
-  year = {2022},
-  month = aug,
-  number = {arXiv:2207.08543},
-  eprint = {2207.08543},
-  eprinttype = {arxiv},
-  primaryclass = {math},
-  publisher = {{arXiv}},
-  doi = {10.48550/arXiv.2207.08543},
+@unpublished {SaneblidzeUmble-comparingDiagonals,
+	AUTHOR = {Samson Saneblidze and Ronald Umble},
+	TITLE = {Comparing Diagonals on the Associahedra},
+ 	NOTE = {Preprint, \href{http://arxiv.org/abs/2207.08543}{\texttt{arXiv:2207.08543}}},
+	YEAR = {2022},
 }
 
-@article{SaneblidzeUmble04,
-  title = {Diagonals on the Permutahedra, Multiplihedra and Associahedra},
-  author = {Saneblidze, Samson and Umble, Ronald},
-  year = {2004},
-  journal = {Homology, Homotopy and Applications},
-  volume = {6},
-  number = {1},
-  pages = {363--411},
-  fjournal = {Homology, Homotopy and Applications}
+@article {SaneblidzeUmble,
+	AUTHOR = {Saneblidze, Samson and Umble, Ronald},
+	TITLE = {Diagonals on the permutahedra, multiplihedra and associahedra},
+	JOURNAL = {Homology Homotopy Appl.},
+	FJOURNAL = {Homology, Homotopy and Applications},
+	VOLUME = {6},
+	YEAR = {2004},
+	NUMBER = {1},
+	PAGES = {363--411},
 }
 
-@misc{vejdemo-johanssonEnumeratingSaneblidzeUmbleDiagonal2007,
-  title = {Enumerating the {{Saneblidze-Umble}} Diagonal Terms},
-  author = {{Vejdemo-Johansson}, Mikael},
-  year = {2007},
-  month = jul,
-  number = {arXiv:0707.4399},
-  eprint = {0707.4399},
-  eprinttype = {arxiv},
-  primaryclass = {math},
-  publisher = {{arXiv}},
-  doi = {10.48550/arXiv.0707.4399},
+@unpublished {VejdemoJohansson,
+	AUTHOR = {{Vejdemo-Johansson}, Mikael},
+	TITLE = {Enumerating the {{Saneblidze-Umble}} Diagonal Terms},
+ 	NOTE = {Preprint, \href{http://arxiv.org/abs/0707.4399}{\texttt{arXiv:0707.4399}}},
+	YEAR = {2007},
 }
 
-@article{LA21,
-  title = {The Diagonal of the Operahedra},
-  author = {{Laplante-Anfossi}, Guillaume},
-  year = {2022},
-  month = aug,
-  journal = {Advances in Mathematics},
-  volume = {405},
-  pages = {108494},
-  issn = {0001-8708},
-  doi = {10.1016/j.aim.2022.108494},
+@article {LaplanteAnfossi,
+	AUTHOR = {Laplante-Anfossi, Guillaume},
+	TITLE = {The diagonal of the operahedra},
+	JOURNAL = {Adv. Math.},
+	FJOURNAL = {Advances in Mathematics},
+	VOLUME = {405},
+	YEAR = {2022},
+	PAGES = {Paper No. 108494, 50},
 }
 
-@article{masudaDiagonalAssociahedra2021,
-  title = {The Diagonal of the Associahedra},
-  author = {Masuda, Naruki and Thomas, Hugh and Tonks, Andy and Vallette, Bruno},
-  year = {2021},
-  journal = {Journal de l'\'Ecole polytechnique \textemdash{} Math\'ematiques},
-  volume = {8},
-  pages = {121--146},
-  doi = {10.5802/jep.142},
+@article {MasudaThomasTonksVallette,
+	AUTHOR = {Masuda, Naruki and Thomas, Hugh and Tonks, Andy and Vallette, Bruno},
+	TITLE = {The diagonal of the associahedra},
+	JOURNAL = {J. \'{E}c. polytech. Math.},
+	FJOURNAL = {Journal de l'\'{E}cole polytechnique. Math\'{e}matiques},
+	VOLUME = {8},
+	YEAR = {2021},
+	PAGES = {121--146},
 }
 
-@article{fultonIntersectionTheoryToric1997a,
-  title = {Intersection Theory on Toric Varieties},
-  author = {Fulton, William and Sturmfels, Bernd},
-  year = {1997},
-  month = mar,
-  journal = {Topology},
-  volume = {36},
-  number = {2},
-  pages = {335--353},
-  issn = {0040-9383},
-  doi = {10.1016/0040-9383(96)00016-X},
+@article {FultonSturmfels,
+	AUTHOR = {Fulton, William and Sturmfels, Bernd},
+	TITLE = {Intersection theory on toric varieties},
+	JOURNAL = {Topology},
+	FJOURNAL = {Topology. An International Journal of Mathematics},
+	VOLUME = {36},
+	YEAR = {1997},
+	NUMBER = {2},
+	PAGES = {335--353},
 }
 
-@article{losevNewModuliSpaces2000,
-  title = {New Moduli Spaces of Pointed Curves and Pencils of Flat Connections.},
-  author = {Losev, A. and Manin, Y.},
-  year = {2000},
-  month = jan,
-  journal = {Michigan Mathematical Journal},
-  volume = {48},
-  number = {1},
-  pages = {443--472},
-  publisher = {{University of Michigan, Department of Mathematics}},
-  issn = {0026-2285, 1945-2365},
-  doi = {10.1307/mmj/1030132728},
-  abstract = {The Michigan Mathematical Journal},
+@incollection {LosevManin,
+	AUTHOR = {Losev, Andrei S. and Manin, Yurii I.},
+	TITLE = {New moduli spaces of pointed curves and pencils of flat connections},
+	NOTE = {Dedicated to William Fulton on the occasion of his 60th birthday},
+	JOURNAL = {Michigan Math. J.},
+	FJOURNAL = {Michigan Mathematical Journal},
+	VOLUME = {48},
+	YEAR = {2000},
+	PAGES = {443--472},
 }
 
-@book{bauesGeometryLoopSpaces1980,
-  title = {Geometry of Loop Spaces and the Cobar Construction},
-  author = {Baues, H. J.},
-  year = {1980},
-  series = {Memoirs of the {{American Mathematical Society}}},
-  volume = {25},
-  publisher = {{American Mathematical Society}},
-  issn = {0065-9266, 1947-6221},
-  doi = {10.1090/memo/0230},
-  abstract = {Advancing research. Creating connections.},
-  isbn = {978-0-8218-2230-2 978-1-4704-0634-9},
-  langid = {english}
+@article {Baues,
+	AUTHOR = {Baues, Hans J.},
+	TITLE = {Geometry of loop spaces and the cobar construction},
+	JOURNAL = {Mem. Amer. Math. Soc.},
+	FJOURNAL = {Memoirs of the American Mathematical Society},
+	VOLUME = {25},
+	YEAR = {1980},
+	NUMBER = {230},
+	PAGES = {ix+171},
 }
 
-@article {MazuirLA22,
-  AUTHOR = {Laplante-Anfossi, Guillaume and Mazuir, Thibaut},
-    TITLE = {The diagonal of the multiplihedra and the tensor product of {A}-infinity morphisms},
-    year = {2023},
-  journal = {Journal de l'{\'E}cole polytechnique},
-  pages = {to appear},
+@article {LaplanteAnfossiMazuir,
+	AUTHOR = {Laplante-Anfossi, Guillaume and Mazuir, Thibaut},
+	TITLE = {The diagonal of the multiplihedra and the tensor product of {$\rm A_\infty$}-morphisms},
+	JOURNAL = {J. \'{E}c. polytech. Math.},
+	FJOURNAL = {Journal de l'\'{E}cole polytechnique. Math\'{e}matiques},
+	VOLUME = {10},
+	YEAR = {2023},
+	PAGES = {405--446},
 }
 
-@article{LodayRonco11,
-  title = {Permutads},
-  author = {Loday, Jean-Louis and Ronco, Mar{\'i}a},
-  year = {2013},
-  journal = {J. Comb. Theory, Ser. A},
-  volume = {120},
-  number = {2},
-  pages = {340--365}
+@article {LodayRonco-permutads,
+	AUTHOR = {Loday, Jean-Louis and Ronco, Mar\'{\i}a},
+	TITLE = {Permutads},
+	JOURNAL = {J. Combin. Theory Ser. A},
+	FJOURNAL = {Journal of Combinatorial Theory. Series A},
+	VOLUME = {120},
+	YEAR = {2013},
+	NUMBER = {2},
+	PAGES = {340--365},
 }
 
-@article{MARKL2020105277,
-  title = {Permutads via Operadic Categories, and the Hidden Associahedron},
-  author = {Markl, Martin},
-  year = {2020},
-  journal = {Journal of Combinatorial Theory, Series A},
-  volume = {175},
-  pages = {105277},
-  issn = {0097-3165},
-  doi = {10.1016/j.jcta.2020.105277}
+@article {Saneblidze-freeLoopFibration,
+	AUTHOR = {Saneblidze, Samson},
+	TITLE = {The bitwisted {C}artesian model for the free loop fibration},
+	JOURNAL = {Topology Appl.},
+	FJOURNAL = {Topology and its Applications},
+	VOLUME = {156},
+	YEAR = {2009},
+	NUMBER = {5},
+	PAGES = {897--910},
 }
 
-@article{saneblidze2009,
-  title = {The Bitwisted {{Cartesian}} Model for the Free Loop Fibration},
-  author = {Saneblidze, Samson},
-  year = {2009},
-  month = feb,
-  journal = {Topology and its Applications},
-  volume = {156},
-  number = {5},
-  pages = {897--910},
-  issn = {0166-8641},
-  urldate = {2023-07-22},
+@article {Serre,
+	AUTHOR = {Serre, Jean-Pierre},
+	TITLE = {Homologie singuli\`ere des espaces fibr\'{e}s. {A}pplications},
+	JOURNAL = {Ann. of Math. (2)},
+	FJOURNAL = {Annals of Mathematics. Second Series},
+	VOLUME = {54},
+	YEAR = {1951},
+	PAGES = {425--505},
 }
 
-@article{serre1951,
-  title = {Homologie {{singuli\`ere des espaces fibr\'es}}},
-  author = {Serre, Jean-Pierre},
-  year = {1951},
-  journal = {Annals of Mathematics},
-  volume = {54},
-  number = {3},
-  eprint = {1969485},
-  eprinttype = {jstor},
-  pages = {425--505},
-  publisher = {{Annals of Mathematics}},
-  issn = {0003-486X},
-  urldate = {2020-12-12}
+@article {EilenbergZilber,
+	AUTHOR = {Eilenberg, Samuel and Zilber, J. A.},
+	TITLE = {On products of complexes},
+	JOURNAL = {Amer. J. Math.},
+	FJOURNAL = {American Journal of Mathematics},
+	VOLUME = {75},
+	YEAR = {1953},
+	PAGES = {200--204},
 }
 
-@article{EilenbergZilber53,
-  title = {On Products of Complexes},
-  author = {Eilenberg, Samuel and Zilber, Joseph A.},
-  year = {1953},
-  journal = {American Journal of Mathematics},
-  volume = {75},
-  pages = {200--204},
-  fjournal = {American Journal of Mathematics}
+@article {EilenbergMacLane,
+	AUTHOR = {Eilenberg, Samuel and MacLane, Saunders},
+	TITLE = {On the groups {$H(\Pi,n)$}. {III}},
+	JOURNAL = {Ann. of Math. (2)},
+	FJOURNAL = {Annals of Mathematics. Second Series},
+	VOLUME = {60},
+	YEAR = {1954},
+	PAGES = {513--557},
 }
 
-@article{EilenbergMacLane54,
-  title = {On the Groups {{H}}({{$\Pi$}},n). {{II}}. {{Methods}} of Computation},
-  author = {Eilenberg, Samuel and Mac Lane, Saunders},
-  year = {1954},
-  journal = {Annals of Mathematics},
-  volume = {60},
-  pages = {49--139},
-  fjournal = {Annals of Mathematics. Second Series}
-}
-
-@article{MarklShnider06,
-  title = {Associahedra, Cellular {{W-construction}} and Products of {{A}}{\textsubscript{{$\infty$}}}-Algebras},
-  author = {Markl, Martin and Shnider, Steve},
-  year = {2006},
-  journal = {Transactions of the American Mathematical Society},
-  volume = {358},
-  number = {6},
-  pages = {2353--2372 (electronic)},
-  fjournal = {Transactions of the American Mathematical Society}
+@article {MarklShnider,
+	AUTHOR = {Markl, Martin and Shnider, Steve},
+	TITLE = {Associahedra, cellular {$W$}-construction and products of {$A_\infty$}-algebras},
+	JOURNAL = {Trans. Amer. Math. Soc.},
+	FJOURNAL = {Transactions of the American Mathematical Society},
+	VOLUME = {358},
+	YEAR = {2006},
+	NUMBER = {6},
+	PAGES = {2353--2372},
 }
