--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -2605,7 +2605,7 @@ The isomorphism $rs\times rs$ from \cref{thm:bijection-operadic-diagonals} sends
 		\draw[thick] (4) to [in=180, out=0, looseness=0] (6);
 		%
 	\end{tikzpicture}
-	\raisebox{3.5em}{$\xrightarrow{rs\times rs}$}
+	\raisebox{3.4em}{$\xrightarrow{rs\times rs}$}
 	\begin{tikzpicture}[scale=.7]  
 		\node[anchor=east] (5) at (-1.5, -4) {$37$};
 		\node[anchor=east] (6) at (-1.5, -3) {$1$};
@@ -2879,7 +2879,7 @@ Performing the $1$-shifts $R_7$ and $L_{56}$ (they are both block and path admis
 		\draw[thick] (4) to [in=180, out=0, looseness=0] (8);
 	\end{tikzpicture}
 	\quad
-	\raisebox{3em}{$\xrightarrow{R_{7} \times L_{56}}$}
+	\raisebox{3.4em}{$\xrightarrow{R_{7} \times L_{56}}$}
 	\quad
 	\begin{tikzpicture}[scale=.7]  
 		\node (p) at (0, 0) {$13|24|57|6 \times 3|17|456|2$};
@@ -3183,32 +3183,35 @@ In Case $(1)$, if the facet $(\sigma,\tau)$ is not a $\SCP$ then it must have a 
 This adjacent crossing is of the following form (we illustrate the case where the crossing happens on the left, the case when it happens on the right is similar): 
 \begin{center}
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_i$};
-\node (2) at (-1.5, -2) {$\sigma_{i+1}$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_i$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i+1}$};
 %
-\node (4) at (1.5, -1) {$\tau_j$};
-\node (5) at (1.5, -2) {$\tau_{k}$};
+\node[anchor=west] (4) at (1.5, -1) {$\tau_j$};
+\node[anchor=west] (5) at (1.5, -2) {$\tau_{k}$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
-\node (6) at (0.9, -0.7) {$\rho$};
+\node (6) at (0.9, -0.8) {$\rho$};
 \node (7) at (0, -2.3) {$b$};
-\node (8) at (-0.9, -0.7) {$c$};
+\node (8) at (-0.9, -0.8) {$c$};
 \end{tikzpicture}
 \quad
-\raisebox{1em}{$\xrightarrow{R^{-1}_{\rho}}$}
+\raisebox{1.9em}{$\xrightarrow{R^{-1}_{\rho}}$}
 \quad
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_i \sqcup \rho$};
-\node (2) at (-1.5, -2) {$\sigma_{i+1}\ssm \rho$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_i \sqcup \rho$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i+1}\ssm \rho$};
 %
-\node (4) at (1.5, -1) {$\tau_j$};
-\node (5) at (1.5, -2) {$\tau_{k}$};
+\node[anchor=west] (4) at (1.5, -1) {$\tau_j$};
+\node[anchor=west] (5) at (1.5, -2) {$\tau_{k}$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
+\node (6) at (0.9, -0.75) {$\rho$};
+\node (7) at (0, -2.3) {$b$};
+\node (8) at (-0.9, -1.45) {$c$};
 \end{tikzpicture}
 \end{center}
 By definition of the geometric $\SU$ diagonal, the fact that $\tau_j < \tau_k$ implies that $\rho > b$, and the fact that $\sigma_i < \sigma_{i+1}$ implies that $b>c$.
@@ -3219,66 +3222,65 @@ Since $\max \sigma_{i,i+1+m} = \max \sigma_{i,i+1}= \rho$ the definition of the 
 Thus, we know that $m > 1$, and using dashed lines to denote paths of length $\geq 1$ we have the following picture
 \begin{center}
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_i$};
-\node (2) at (-1.5, -2) {$\sigma_{i+1}$};
-\node (3) at (-1.5, -3) {$\sigma_{i+1+m}$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_i$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i+1}$};
+\node[anchor=east] (3) at (-1.5, -3) {$\sigma_{i+1+m}$};
 %
-\node (4) at (1.5, -1) {$\hphantom{.}$};
-\node (5) at (1.5, -2) {$\hphantom{.}$};
+\node[anchor=west](4) at (1.5, -1) {$\hphantom{.}$};
+\node[anchor=west](5) at (1.5, -2) {$\hphantom{.}$};
 %
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick,dashed] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (3) to [in=180, out=0, looseness=0] (4);
 \draw[thick,dashed] (3) to [in=180, out=0, looseness=0] (5);
 %
-\node (6) at (1.3, -1.3) {$\rho$};
+\node (6) at (1.3, -1.4) {$\rho$};
 \end{tikzpicture}
-$\xrightarrow{R_\rho^{-1}}$
+\raisebox{2.15em}{$\xrightarrow{R^{-1}_{\rho}}$}
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_i$};
-\node (2) at (-1.5, -2) {$\sigma_{i+1}\sqcup \rho$};
-\node (3) at (-1.5, -3) {$\sigma_{i+1+m}\ssm \rho$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_i$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i+1}\sqcup \rho$};
+\node[anchor=east] (3) at (-1.5, -3) {$\sigma_{i+1+m}\ssm \rho$};
 %
-\node (4) at (1.5, -1) {$\hphantom{.}$};
-\node (5) at (1.5, -2) {$\hphantom{.}$};
+\node[anchor=west] (4) at (1.5, -1) {$\hphantom{.}$};
+\node[anchor=west] (5) at (1.5, -2) {$\hphantom{.}$};
 %
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick,dashed] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
 \draw[thick,dashed] (3) to [in=180, out=0, looseness=0] (5);
 %
-\node (6) at (1.3, -1.3) {$\rho$};
+\node (6) at (1.3, -1.4) {$\rho$};
 \end{tikzpicture}
 \end{center}
 As we have $\rho=\max \sigma_{i,i+1} > \max\sigma_{i+1+m,i+1}$, an inverse $m$-shift operation can be performed.
-\Guillaume{@Kurt, can you align the nodes + put the arrow in the middle of the picture?}
 
 In the Case $(2.b.i)$, there exists $j,m>0$ such that $\tau_{j-m}$ is the block of $\tau$ which contains the maximal element $\rho$, and $\tau_j$ is any greater block on the path from $\sigma_i$ to $\sigma_{i+1}$. 
 Then we may apply the following inverse $m$-shift operator.
 \begin{center}
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_i$};
-\node (2) at (-1.5, -2) {$\sigma_{i+1}$};
-\node (3) at (-1.5, -3) {$\sigma_{i+1+m}$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_i$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i+1}$};
+\node[anchor=east] (3) at (-1.5, -3) {$\sigma_{i+1+m}$};
 %
-\node (4) at (1.5, -1) {$\tau_{j-m}$};
-\node (5) at (1.5, -2) {$\tau_j$};
+\node[anchor=west] (4) at (1.5, -1) {$\tau_{j-m}$};
+\node[anchor=west] (5) at (1.5, -2) {$\tau_j$};
 %
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (5);
 \draw[thick,dashed] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (3) to [in=180, out=0, looseness=0] (4);
 %
-\node (6) at (0.3, -2.8) {$\rho$};
+\node (6) at (-0.5, -2.8) {$\rho$};
 \end{tikzpicture}
-$\xrightarrow{L_\rho^{-1}}$
+\raisebox{2.15em}{$\xrightarrow{L_\rho^{-1}}$}
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_i$};
-\node (2) at (-1.5, -2) {$\sigma_{i+1}$};
-\node (3) at (-1.5, -3) {$\sigma_{i+1+m}$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_i$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i+1}$};
+\node[anchor=east] (3) at (-1.5, -3) {$\sigma_{i+1+m}$};
 %
-\node (4) at (1.5, -1) {$\tau_{j-m}\ssm \rho$};
-\node (5) at (1.5, -2) {$\tau_j \sqcup \rho$};
+\node[anchor=west] (4) at (1.5, -1) {$\tau_{j-m}\ssm \rho$};
+\node[anchor=west] (5) at (1.5, -2) {$\tau_j \sqcup \rho$};
 %
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (5);
@@ -3297,37 +3299,37 @@ We must have $n>1$, since $\rho$ is the last step and $\sigma_i|\sigma_{i+1}$ ar
 The situation can be pictured as on the left.
 \begin{center}
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_{i-n}$};
-\node (2) at (-1.5, -2) {$\sigma_{i}$};
-\node (3) at (-1.5, -3) {$\sigma_{i+1}$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_{i-n}$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i}$};
+\node[anchor=east] (3) at (-1.5, -3) {$\sigma_{i+1}$};
 %
-\node (4) at (1.5, -1) {$\tau_{j-m}$};
-\node (5) at (1.5, -2) {$\tau_j$};
+\node[anchor=west] (4) at (1.5, -1) {$\tau_{j-m}$};
+\node[anchor=west] (5) at (1.5, -2) {$\tau_j$};
 %
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
 \draw[thick,dashed] (2) to [in=180, out=0, looseness=0] (4);
 \draw[thick] (3) to [in=180, out=0, looseness=0] (5);
 %
-\node (6) at  (0.8, -2.5) {$\rho$};
-\node (7) at  (0.8, -1.5) {$i_k$};
+\node (6) at  (1.1, -2.5) {$\rho$};
+\node (7) at  (1.1, -1.5) {$i_k$};
 \end{tikzpicture}
-$\xrightarrow{L_{\rho'}^{-1}}$
+\raisebox{2.15em}{$\xrightarrow{L_{\rho'}^{-1}}$}
 \begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$\sigma_{i-n}$};
-\node (2) at (-1.5, -2) {$\sigma_{i}$};
-\node (3) at (-1.5, -3) {$\sigma_{i+1}$};
+\node[anchor=east] (1) at (-1.5, -1) {$\sigma_{i-n}$};
+\node[anchor=east] (2) at (-1.5, -2) {$\sigma_{i}$};
+\node[anchor=east] (3) at (-1.5, -3) {$\sigma_{i+1}$};
 %
-\node (4) at (1.5, -1) {$\tau_{j-m}\ssm \rho'$};
-\node (5) at (1.5, -2) {$\tau_j \sqcup \rho'$};
+\node[anchor=west] (4) at (1.5, -1) {$\tau_{j-m}\ssm \rho'$};
+\node[anchor=west] (5) at (1.5, -2) {$\tau_j \sqcup \rho'$};
 %
 \draw[thick,dashed] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
 \draw[thick,dashed] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (3) to [in=180, out=0, looseness=0] (5);
 %
-\node (6) at  (0.45, -2.5) {$\rho$};
-\node (7) at  (0.45, -1.5) {$i_k$};
+\node (6) at  (1.1, -2.5) {$\rho$};
+\node (7) at  (1.1, -1.5) {$i_k$};
 \end{tikzpicture}
 \end{center}
 Now let $\rho' \eqdef \max\sigma_{i,i-n}$ be the maximum of the path $\sigma_{i,i-n}=(i_1,j_1,i_2,...,i_{k-1},j_{k-1})$, and let~$\tau_{j-m}$, $m\geq 1$ be the block of $\tau$ containing $\rho'$.
@@ -3344,39 +3346,39 @@ Here are examples of each of the cases in the proof of \cref{lem:inverse-to-SCP}
 We display cases $(1)$, $(2.a)$, $(2.b.i)$ and, $(2.b.ii)$ respectively, reading the diagrams from top-left to bottom-right. 
 
 \begin{center}
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$1$};
-\node (2) at (-1.5, -2) {$23$};
+\begin{tikzpicture}[scale=.6,xscale=0.8]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$23$};
 %
-\node (4) at (1.5, -1) {$3$};
-\node (5) at (1.5, -2) {$12$};
+\node[anchor=west] (4) at (1.5, -1) {$3$};
+\node[anchor=west] (5) at (1.5, -2) {$12$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
 \end{tikzpicture}
 \quad
-\raisebox{1em}{$\xrightarrow{R^{-1}_{3}}$}
+\raisebox{1.3em}{$\xrightarrow{R^{-1}_{3}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$13$};
-\node (2) at (-1.5, -2) {$2$};
+\begin{tikzpicture}[scale=.6,xscale=0.8]  
+\node[anchor=east] (1) at (-1.5, -1) {$13$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
 %
-\node (4) at (1.5, -1) {$3$};
-\node (5) at (1.5, -2) {$12$};
+\node[anchor=west] (4) at (1.5, -1) {$3$};
+\node[anchor=west] (5) at (1.5, -2) {$12$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 ,
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$1$};
-\node (2) at (-1.5, -2) {$2$};
-\node (3) at (-1.5, -3) {$34$};
+\begin{tikzpicture}[scale=.6,xscale=0.8] 
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
+\node[anchor=east] (3) at (-1.5, -3) {$34$};
 %
-\node (4) at (1.5, -1) {$14$};
-\node (5) at (1.5, -2) {$23$};
+\node[anchor=west] (4) at (1.5, -1) {$14$};
+\node[anchor=west] (5) at (1.5, -2) {$23$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5); 
@@ -3384,15 +3386,15 @@ We display cases $(1)$, $(2.a)$, $(2.b.i)$ and, $(2.b.ii)$ respectively, reading
 \draw[thick] (3) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 \quad
-\raisebox{1.5em}{$\xrightarrow{R^{-1}_{4}}$}
+\raisebox{2.15em}{$\xrightarrow{R^{-1}_{4}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$1$};
-\node (2) at (-1.5, -2) {$24$};
-\node (3) at (-1.5, -3) {$3$};
+\begin{tikzpicture}[scale=.6,xscale=0.8]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$24$};
+\node[anchor=east] (3) at (-1.5, -3) {$3$};
 %
-\node (4) at (1.5, -1) {$14$};
-\node (5) at (1.5, -2) {$23$};
+\node[anchor=west] (4) at (1.5, -1) {$14$};
+\node[anchor=west] (5) at (1.5, -2) {$23$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
@@ -3401,13 +3403,13 @@ We display cases $(1)$, $(2.a)$, $(2.b.i)$ and, $(2.b.ii)$ respectively, reading
 \end{tikzpicture}
 \end{center}
 \begin{center}
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$13$};
-\node (2) at (-1.5, -2) {$2$};
-\node (3) at (-1.5, -3) {$4$};
+\begin{tikzpicture}[scale=.6,xscale=0.8]    
+\node[anchor=east] (1) at (-1.5, -1) {$13$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
+\node[anchor=east] (3) at (-1.5, -3) {$4$};
 %
-\node (4) at (1.5, -1) {$34$};
-\node (5) at (1.5, -2) {$12$};
+\node[anchor=west] (4) at (1.5, -1) {$34$};
+\node[anchor=west] (5) at (1.5, -2) {$12$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
@@ -3415,15 +3417,15 @@ We display cases $(1)$, $(2.a)$, $(2.b.i)$ and, $(2.b.ii)$ respectively, reading
 \draw[thick] (3) to [in=180, out=0, looseness=0] (4);
 \end{tikzpicture}
 \quad
-\raisebox{1.5em}{$\xrightarrow{L^{-1}_{4}}$}
+\raisebox{2.15em}{$\xrightarrow{L^{-1}_{4}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$13$};
-\node (2) at (-1.5, -2) {$2$};
-\node (3) at (-1.5, -3) {$4$};
+\begin{tikzpicture}[scale=.6,xscale=0.8]    
+\node[anchor=east] (1) at (-1.5, -1) {$13$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
+\node[anchor=east] (3) at (-1.5, -3) {$4$};
 %
-\node (4) at (1.5, -1) {$3$};
-\node (5) at (1.5, -2) {$124$};
+\node[anchor=west] (4) at (1.5, -1) {$3$};
+\node[anchor=west] (5) at (1.5, -2) {$124$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
@@ -3431,13 +3433,13 @@ We display cases $(1)$, $(2.a)$, $(2.b.i)$ and, $(2.b.ii)$ respectively, reading
 \draw[thick] (3) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 ,
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$12$};
-\node (2) at (-1.5, -2) {$3$};
-\node (3) at (-1.5, -3) {$4$};
+\begin{tikzpicture}[scale=.6,xscale=0.8]   
+\node[anchor=east] (1) at (-1.5, -1) {$12$};
+\node[anchor=east] (2) at (-1.5, -2) {$3$};
+\node[anchor=east] (3) at (-1.5, -3) {$4$};
 %
-\node (4) at (1.5, -1) {$23$};
-\node (5) at (1.5, -2) {$14$};
+\node[anchor=west] (4) at (1.5, -1) {$23$};
+\node[anchor=west] (5) at (1.5, -2) {$14$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
@@ -3445,15 +3447,15 @@ We display cases $(1)$, $(2.a)$, $(2.b.i)$ and, $(2.b.ii)$ respectively, reading
 \draw[thick] (3) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 \quad
-\raisebox{1.5em}{$\xrightarrow{L^{-1}_{3}}$}
+\raisebox{2.15em}{$\xrightarrow{L^{-1}_{3}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$12$};
-\node (2) at (-1.5, -2) {$3$};
-\node (3) at (-1.5, -3) {$4$};
+\begin{tikzpicture}[scale=.6,xscale=0.8]    
+\node[anchor=east] (1) at (-1.5, -1) {$12$};
+\node[anchor=east] (2) at (-1.5, -2) {$3$};
+\node[anchor=east] (3) at (-1.5, -3) {$4$};
 %
-\node (4) at (1.5, -1) {$2$};
-\node (5) at (1.5, -2) {$134$};
+\node[anchor=west] (4) at (1.5, -1) {$2$};
+\node[anchor=west] (5) at (1.5, -2) {$134$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
@@ -3579,15 +3581,15 @@ The $\SCP$s $(\sigma,\tau)  \eqdef  5|17|4|236 \times 57|146|3|2$, and $(\sigma'
 
 \begin{center}
 \begin{tikzpicture}[scale=.7]  
-\node (1) at (-1.5, -1) {$5$};
-\node (2) at (-1.5, -2) {$17$};
-\node (3) at (-1.5, -3) {$4$};
-\node (4) at (-1.5, -4) {$236$};
+\node[anchor=east] (1) at (-1.5, -1) {$5$};
+\node[anchor=east] (2) at (-1.5, -2) {$17$};
+\node[anchor=east] (3) at (-1.5, -3) {$4$};
+\node[anchor=east] (4) at (-1.5, -4) {$236$};
 %
-\node (5) at (1.5, -1) {$57$};
-\node (6) at (1.5, -2) {$146$};
-\node (7) at (1.5, -3) {$3$};
-\node (8) at (1.5, -4) {$2$};
+\node[anchor=west] (5) at (1.5, -1) {$57$};
+\node[anchor=west] (6) at (1.5, -2) {$146$};
+\node[anchor=west] (7) at (1.5, -3) {$3$};
+\node[anchor=west] (8) at (1.5, -4) {$2$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0](5); 
 \draw[thick] (2) to [in=180, out=0, looseness=0](5); 
@@ -3598,17 +3600,17 @@ The $\SCP$s $(\sigma,\tau)  \eqdef  5|17|4|236 \times 57|146|3|2$, and $(\sigma'
 \draw[thick] (4) to [in=180, out=0, looseness=0](8);
 %
 \end{tikzpicture}
-$\xrightarrow{t(r\times r)}$
+\raisebox{3.4em}{$\xrightarrow{t(r\times r)}$}
 \begin{tikzpicture}[scale=.7]  
-\node (1) at (-1.5, -1) {$13$};
-\node (2) at (-1.5, -2) {$247$};
-\node (3) at (-1.5, -3) {$5$};
-\node (4) at (-1.5, -4) {$6$};
+\node[anchor=east] (1) at (-1.5, -1) {$13$};
+\node[anchor=east] (2) at (-1.5, -2) {$247$};
+\node[anchor=east] (3) at (-1.5, -3) {$5$};
+\node[anchor=east] (4) at (-1.5, -4) {$6$};
 %
-\node (5) at (1.5, -1) {$3$};
-\node (6) at (1.5, -2) {$17$};
-\node (7) at (1.5, -3) {$4$};
-\node (8) at (1.5, -4) {$256$};
+\node[anchor=west] (5) at (1.5, -1) {$3$};
+\node[anchor=west] (6) at (1.5, -2) {$17$};
+\node[anchor=west] (7) at (1.5, -3) {$4$};
+\node[anchor=west] (8) at (1.5, -4) {$256$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0](5); 
 \draw[thick] (2) to [in=180, out=0, looseness=0](5); 
@@ -3668,55 +3670,55 @@ We will show in the next section, that these recovered diagrams are the Hasse di
 
 \begin{example}
 It was observed in \cite{LaplanteAnfossi} that the $LA$ and $SU$ diagonals coincided up until $n=3$, however due to their dual shift structure they generate the non-$SCP$ pairs in a dual fashion.
-In particular, the two center faces of the hexagon (\cref{fig:diagonalPermutahedron2}) are generated by 
+In particular, the two center faces of the hexagon (\cref{fig:fig:LUSAdiagonals}) are generated by 
 \begin{center}
 
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$13$};
-\node (2) at (-1.5, -2) {$2$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$13$};
+\node[anchor=east] (2) at (-1.5, -2) {$2$};
 %
-\node (4) at (1.5, -1) {$3$};
-\node (5) at (1.5, -2) {$12$};
+\node[anchor=west] (4) at (1.5, -1) {$3$};
+\node[anchor=west] (5) at (1.5, -2) {$12$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 \quad
-\raisebox{1em}{$\xrightarrow{R^{SU}_{3}}$}
+\raisebox{1.3em}{$\xrightarrow{R^{SU}_{3}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$1$};
-\node (2) at (-1.5, -2) {$23$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$23$};
 %
-\node (4) at (1.5, -1) {$3$};
-\node (5) at (1.5, -2) {$12$};
+\node[anchor=west] (4) at (1.5, -1) {$3$};
+\node[anchor=west] (5) at (1.5, -2) {$12$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
 \end{tikzpicture}
 ,\quad \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$12$};
-\node (2) at (-1.5, -2) {$3$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$12$};
+\node[anchor=east] (2) at (-1.5, -2) {$3$};
 %
-\node (4) at (1.5, -1) {$2$};
-\node (5) at (1.5, -2) {$13$};
+\node[anchor=west] (4) at (1.5, -1) {$2$};
+\node[anchor=west] (5) at (1.5, -2) {$13$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 \quad
-\raisebox{1em}{$\xrightarrow{L^{SU}_{3}}$}
+\raisebox{1.3em}{$\xrightarrow{L^{SU}_{3}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$12$};
-\node (2) at (-1.5, -2) {$3$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$12$};
+\node[anchor=east] (2) at (-1.5, -2) {$3$};
 %
-\node (4) at (1.5, -1) {$23$};
-\node (5) at (1.5, -2) {$1$};
+\node[anchor=west] (4) at (1.5, -1) {$23$};
+\node[anchor=west] (5) at (1.5, -2) {$1$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
@@ -3726,52 +3728,52 @@ In particular, the two center faces of the hexagon (\cref{fig:diagonalPermutahed
 \end{center}
 and
 \begin{center}
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$1$};
-\node (2) at (-1.5, -2) {$23$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$23$};
 %
-\node (4) at (1.5, -1) {$13$};
-\node (5) at (1.5, -2) {$2$};
+\node[anchor=west] (4) at (1.5, -1) {$13$};
+\node[anchor=west] (5) at (1.5, -2) {$2$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 \quad
-\raisebox{1em}{$\xrightarrow{R^{LA}_{1}}$}
+\raisebox{1.3em}{$\xrightarrow{R^{LA}_{1}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$1$};
-\node (2) at (-1.5, -2) {$23$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$1$};
+\node[anchor=east] (2) at (-1.5, -2) {$23$};
 %
-\node (4) at (1.5, -1) {$3$};
-\node (5) at (1.5, -2) {$12$};
+\node[anchor=west] (4) at (1.5, -1) {$3$};
+\node[anchor=west] (5) at (1.5, -2) {$12$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (5); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 ,\quad \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$2$};
-\node (2) at (-1.5, -2) {$13$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$2$};
+\node[anchor=east] (2) at (-1.5, -2) {$13$};
 %
-\node (4) at (1.5, -1) {$23$};
-\node (5) at (1.5, -2) {$1$};
+\node[anchor=west] (4) at (1.5, -1) {$23$};
+\node[anchor=west] (5) at (1.5, -2) {$1$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
 \draw[thick] (2) to [in=180, out=0, looseness=0] (5);
 \end{tikzpicture}
 \quad
-\raisebox{1em}{$\xrightarrow{L^{LA}_{1}}$}
+\raisebox{1.3em}{$\xrightarrow{L^{LA}_{1}}$}
 \quad
-\begin{tikzpicture}[scale=.6]  
-\node (1) at (-1.5, -1) {$12$};
-\node (2) at (-1.5, -2) {$3$};
+\begin{tikzpicture}[scale=.6,xscale=0.6]  
+\node[anchor=east] (1) at (-1.5, -1) {$12$};
+\node[anchor=east] (2) at (-1.5, -2) {$3$};
 %
-\node (4) at (1.5, -1) {$23$};
-\node (5) at (1.5, -2) {$1$};
+\node[anchor=west] (4) at (1.5, -1) {$23$};
+\node[anchor=west] (5) at (1.5, -2) {$1$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0] (4); 
 \draw[thick] (2) to [in=180, out=0, looseness=0] (4);
@@ -3897,15 +3899,15 @@ Informally, given a permutation $\sigma$, start in the bottom left corner of a m
 \raisebox{3em}{$6524713$}
 $\quad \quad$
 \begin{tikzpicture}[scale=.7]  
-\node (1) at (-1.5, -1) {$256$};
-\node (2) at (-1.5, -2) {$4$};
-\node (3) at (-1.5, -3) {$17$};
-\node (4) at (-1.5, -4) {$3$};
+\node[anchor=east] (1) at (-1.5, -1) {$256$};
+\node[anchor=east] (2) at (-1.5, -2) {$4$};
+\node[anchor=east] (3) at (-1.5, -3) {$17$};
+\node[anchor=east] (4) at (-1.5, -4) {$3$};
 %
-\node (5) at (1.5, -1) {$6$};
-\node (6) at (1.5, -2) {$5$};
-\node (7) at (1.5, -3) {$247$};
-\node (8) at (1.5, -4) {$13$};
+\node[anchor=west] (5) at (1.5, -1) {$6$};
+\node[anchor=west] (6) at (1.5, -2) {$5$};
+\node[anchor=west] (7) at (1.5, -3) {$247$};
+\node[anchor=west] (8) at (1.5, -4) {$13$};
 %
 \draw[thick] (1) to [in=180, out=0, looseness=0](5);
 \draw[thick] (1) to [in=180, out=0, looseness=0](6); 
